# Parsers

./: CMakeLists.txt  PROSE.md  README.md  main.cpp
inc/: parser.h  utils.h
src/: CMakeLists.txt  parser.cpp  partition.cpp
